added path and updated pathplanner to 2024
did this so we can use vertigo to test paths