@@ -6,19 +6,22 @@ import java.util.List;
 import java.util.function.Consumer;
 import java.util.function.Supplier;
 
-import com.pathplanner.lib.PathConstraints;
-import com.pathplanner.lib.PathPlanner;
-import com.pathplanner.lib.PathPlannerTrajectory;
-import com.pathplanner.lib.PathPoint;
-import com.pathplanner.lib.commands.PPSwerveControllerCommand;
+import com.pathplanner.lib.commands.FollowPathHolonomic;
+import com.pathplanner.lib.path.GoalEndState;
+import com.pathplanner.lib.path.PathConstraints;
+import com.pathplanner.lib.path.PathPlannerPath;
+import com.pathplanner.lib.path.PathPoint;
+import com.pathplanner.lib.util.HolonomicPathFollowerConfig;
+import com.pathplanner.lib.util.ReplanningConfig;
 
-import edu.wpi.first.math.controller.PIDController;
 import edu.wpi.first.math.geometry.Pose2d;
 import edu.wpi.first.math.kinematics.ChassisSpeeds;
 import edu.wpi.first.wpilibj.DriverStation;
+import edu.wpi.first.wpilibj.DriverStation.Alliance;
 import edu.wpi.first.wpilibj2.command.InstantCommand;
 import edu.wpi.first.wpilibj2.command.SequentialCommandGroup;
 import frc.robot.constants.AutoConstants;
+import frc.robot.constants.swerve.DriveConstants;
 import frc.robot.subsystems.Drivetrain;
 import frc.robot.util.Conversions;
 import frc.robot.util.PathGroupLoader;
@@ -31,18 +34,22 @@ public class PathPlannerCommand extends SequentialCommandGroup {
   }
 
   public PathPlannerCommand(ArrayList<PathPoint> waypoints, Drivetrain drive, boolean useAllianceColor) {
-    this(new ArrayList<PathPlannerTrajectory>(Arrays.asList(PathPlanner.generatePath(
-      new PathConstraints(AutoConstants.kMaxAutoSpeed, AutoConstants.kMaxAutoAccel),
-      waypoints.get(0),
-      waypoints.get(1)
+    this(new ArrayList<PathPlannerPath>(Arrays.asList(new PathPlannerPath(
+      List.of(
+        waypoints.get(0).position,
+        waypoints.get(1).position),
+      new PathConstraints(AutoConstants.kMaxAutoSpeed, AutoConstants.kMaxAutoAccel, DriveConstants.kMaxAngularSpeed, DriveConstants.kMaxAngularAccel),
+      new GoalEndState(0, waypoints.get(1).rotationTarget.getTarget())
     ))), 0, drive, false, useAllianceColor, true);
   }
 
   public PathPlannerCommand(ArrayList<PathPoint> waypoints, Drivetrain drive, boolean useAllianceColor, double maxSpeed, double maxAccel) {
-    this(new ArrayList<PathPlannerTrajectory>(Arrays.asList(PathPlanner.generatePath(
-      new PathConstraints(maxSpeed, maxAccel),
-      waypoints.get(0),
-      waypoints.get(1)
+    this(new ArrayList<PathPlannerPath>(Arrays.asList(new PathPlannerPath(
+      List.of(
+        waypoints.get(0).position,
+        waypoints.get(1).position),
+      new PathConstraints(maxSpeed, maxAccel, DriveConstants.kMaxAngularSpeed, DriveConstants.kMaxAngularAccel),
+      new GoalEndState(0, waypoints.get(1).rotationTarget.getTarget())
     ))), 0, drive, false, useAllianceColor, true);
   }
   
@@ -54,11 +61,11 @@ public class PathPlannerCommand extends SequentialCommandGroup {
     this(PathGroupLoader.getPathGroup(pathGroupName), pathIndex, drive, resetPose, true, false); 
   }
 
-  public PathPlannerCommand(List<PathPlannerTrajectory> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose){
+  public PathPlannerCommand(List<PathPlannerPath> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose){
     this(pathGroup, pathIndex, drive, resetPose, true, false);
   }
 
-  public PathPlannerCommand(List<PathPlannerTrajectory> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose, boolean useAllianceColor, boolean isPerpetual) {
+  public PathPlannerCommand(List<PathPlannerPath> pathGroup, int pathIndex, Drivetrain drive, boolean resetPose, boolean useAllianceColor, boolean isPerpetual) {
 
     addRequirements(drive);
     if (pathIndex < 0 || pathIndex > pathGroup.size() - 1) {
@@ -67,10 +74,16 @@ public class PathPlannerCommand extends SequentialCommandGroup {
     
     addCommands(
       new InstantCommand( () -> {
-        PathPlannerTrajectory path = PathPlannerTrajectory.transformTrajectoryForAlliance(
-          pathGroup.get(pathIndex), DriverStation.getAlliance());
+        PathPlannerPath path = pathGroup.get(pathIndex);
+        if(DriverStation.getAlliance()==Alliance.Red){
+          path.flipPath();
+        }
         if (resetPose) {
-          drive.resetOdometry(Conversions.absolutePoseToPathPlannerPose(path.getInitialHolonomicPose(), DriverStation.getAlliance()));
+          drive.resetOdometry(path.getPreviewStartingHolonomicPose());
+        }
+        //TODO: This might be unnecessary, maybe delete it
+        if(DriverStation.getAlliance()==Alliance.Red){
+          path.flipPath();
         }
       }),
       createSwerveControllerCommand(
@@ -78,10 +91,10 @@ public class PathPlannerCommand extends SequentialCommandGroup {
         useAllianceColor ? // Pose supplier
           () -> Conversions.absolutePoseToPathPlannerPose(drive.getPose(), DriverStation.getAlliance()) : 
           () -> drive.getPose(), 
-        drive.getPathplannerXController(), // X controller can't normal PID as pathplanner has Feed Forward 
-        drive.getPathplannerYController(), // Y controller can't normal PID as pathplanner has Feed Forward 
-        drive.getPathplannerRotationController(), // Rotation controller can't normal PID as pathplanner has Feed Forward 
+        ()-> drive.getChassisSpeeds(),
         (chassisSpeeds) -> { drive.setChassisSpeeds(chassisSpeeds, false); }, // chassis Speeds consumer
+        AutoConstants.kMaxAutoSpeed,
+        Math.sqrt(2)*DriveConstants.kTrackWidth/2,
         useAllianceColor,  // use Alliance color
         drive, // Requires this drive subsystem
         isPerpetual
@@ -89,32 +102,33 @@ public class PathPlannerCommand extends SequentialCommandGroup {
     );
   }
   
-  public static PPSwerveControllerCommand createSwerveControllerCommand(
-      PathPlannerTrajectory trajectory, Supplier<Pose2d> poseSupplier, 
-      PIDController xController, PIDController yController, PIDController rotationController, 
-      Consumer<ChassisSpeeds> outputChassisSpeeds, boolean useAllianceColor, Drivetrain drive, boolean isPerpetual) {
+  public static FollowPathHolonomic createSwerveControllerCommand(
+      PathPlannerPath path, Supplier<Pose2d> poseSupplier, 
+      Supplier<ChassisSpeeds> speedSupplier,
+      Consumer<ChassisSpeeds> outputChassisSpeeds, 
+      double maxModuleSpeed,
+      double driveBaseReadius,
+      boolean useAllianceColor, Drivetrain drive, boolean isPerpetual) {
     if (isPerpetual) {
       return new PPSwerveControllerCommandPerpetual(
-        trajectory,
+        path,
         poseSupplier,
-        xController,
-        yController,
-        rotationController,
+        speedSupplier,
         outputChassisSpeeds,
+        new HolonomicPathFollowerConfig(maxModuleSpeed, driveBaseReadius, new ReplanningConfig(false, false)),
         useAllianceColor,
         drive
       );
     }
 
-    return new PPSwerveControllerCommand(
-      trajectory,
-      poseSupplier,
-      xController,
-      yController,
-      rotationController,
-      outputChassisSpeeds,
-      useAllianceColor,
-      drive
+    return new FollowPathHolonomic(
+        path,
+        poseSupplier,
+        speedSupplier,
+        outputChassisSpeeds,
+        new HolonomicPathFollowerConfig(maxModuleSpeed, driveBaseReadius, new ReplanningConfig(false, false)),
+        ()-> useAllianceColor,
+        drive
     );
   }
 }
